# steer_bot

./: README.md
steer_bot_control/config/: ctrl_ackermann_steering_controller.yaml
steer_bot_description/urdf/: steer_bot.urdf.xacro
steer_bot_gazebo/launch/: obstacles.launch  steer_bot_sim.launch  steer_bot_sim_obstacles.launch
steer_bot_gazebo/scripts/: groundtruth_odom.py
steer_bot_gazebo/worlds/: obstacles.world
steer_bot_motion/: CMakeLists.txt  package.xml
steer_bot_motion/scripts/: fake_odom.py  keyboard_control.py
steer_bot_navigation/config/: costmap_common.yaml  costmap_common_params.yaml  costmap_global_static.yaml  costmap_local.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planner.yaml  teb_local_planner_params.yaml
steer_bot_navigation/launch/: amcl.launch  gmapping.launch  move_base.launch  move_base_1.launch  move_base_2.launch
steer_bot_navigation/maps/: map.pgm  map.yaml  map_edited.pgm  map_edited.yaml  my_map.pgm
steer_bot_navigation/motion_premitives/: generate_motion_primitives.jl  test1.mprim  yaw_res_64.mprim  yaw_resolution_16.mprim
steer_bot_viz/rviz/: steer_bot_navigation.rviz
